--- a/MyFirst.html
+++ b/MyFirst.html
@@ -1,50 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first site!</title>
+    <link rel="stylesheet" href="MyArts.css">
+    <link rel="stylesheet" href="JSScripts.js">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type='text/css'>
 </head>
+
 <body>
-        <h1> Почему тестирование?</h1>
-        <hr>
-        <h2><i> Всем привет, меня зовут Оля.</i></h2>
-        <embed src="https://c.tenor.com/kQcGDGtb79QAAAAC/alice-animated-alice-stickers.gif">
-        <p>
-        <h4>По профессии я юрист, изучала, интересовалась, работала, развивалась в этой области пока не пришло время и... <i>я
-                ушла в декрет)))</i> </h4>
-        </p>
-        <p>
-        <h4> Мгновенно пролетели 5 лет, в течение которых я радовалась, удивлялась, умилялась, уставала, недосыпала, одним
-            словом была счастлива в моем новом приобретенном статусе пока снова не пришло время и... я поняла, что мое личное
-            развитие остановилось, что я застряла на одном месте((</h4>
-        </p>
-        <p>
-            <img src="img/zzz-sleep-icon.jpg" alt="Изображение zzzzz"higth="50"width="100">
-        </p>
-        <p>
-            <h3> Так я встретилась с IT</h3>
-            <hr>
-        </p>
-        <p>
-            Ходят слухи, что тестирование это просто и каждый справиться. 
-            <br>Я с этим категорически <strong> не согласна!</strong> 
-        </p>
-            <p>
-                <h3> Объясню почему... </h3>
-                <ul>
-                    <li>
-                        <i> Во первых, я уверена, что тестировщик должен обладать особым складом ума.</i>
-                        <br>Потому что придумать более 10 вариантов имен для теста модуля регистрации сможет только тестировщик! 
-                    </li>
-                    <br>
-                    <li>
-                        <i> Во вторых, уметь и любить выполнять одну и ту же работу ежедневно.</i> 
-                        <br>
-                    </li>
-                </ul>
-            </p>
+
+
+    <p>
+        <embed src="https://c.tenor.com/kQcGDGtb79QAAAAC/alice-animated-alice-stickers.gif" height="80" class="leftimg">
+    <h1><i>Всем привет! Меня зовут Оля!</i></h1>
+    </p>
+    <hr>
+    <p>
+    <h4>Сегодня расскажу немного о кошечках)</h4>
+    </p>
+    <p>
+        На свете насчитывается более 200 различных попрод кошек. Мы посмотрим несколько из них:
+        <br>
+    <ul>
+        <li>Саванна</li>
+        <li>Американская жесткошерстная кошка</li>
+        <li>Сноу-шу</li>
+    </ul>
+    <i>Чтобы подробнее почитать о каждой жми на картинку.</i>
+    </p>
+    <br>
+    <p>
+        <a href="https://petstory.ru/knowledge/cats/cat-breeds/savannah/"><img
+                src="https://storage-api.petstory.ru/resize/0x0x70/c5/08/44/c5084487d1c1434f83d6114f27e96339.jpeg"
+                alt="Изображение кошки Саванны" height="160" class="leftimg"></a>
+    </p>
+    <p>
+    <h2>Саванна</h2>
+    <h4>Краткие сведения:</h4>
+    <ul>
+        <li>любознательный исследователь;</li>
+        <li>очень общительная и ласковая кошка;</li>
+        <li>не склонна к проявлению агрессии при правильном воспитании.</li>
+    </ul>
+    </p>
+    <hr>
+    <p>
+        <a href="https://petstory.ru/knowledge/cats/cat-breeds/american-wirehair/"><img src="img/кошка.jpg"
+                alt="Изображение кошки" height="160" class="leftimg"></a>
+    </p>
+    <p>
+    <h2>Американская жесткошерстная кошка</h2>
+    <h4>Краткие сведения:</h4>
+    <ul>
+        <li>Другое название породы — проволочная кошка;</li>
+        <li>Игривы и дружелюбны;</li>
+        <li>Редкая порода, в основном встречается в США и Канаде.</li>
+    </ul>
+    </p>
+    <hr>
+    <p>
+        <a href="https://petstory.ru/knowledge/cats/cat-breeds/snowshoe/"> <img
+                src="https://storage-api.petstory.ru/resize/0x0x70/fd/a8/11/fda811016678474692e69b9adbb982ab.jpeg"
+                alt="Изображение кошки сноу-шу" height="160" class="leftimg"></a>
+    </p>
+    <p>
+    <h2>Сноу-шу </h2>
+    <h4>Краткие сведения:</h4>
+    <ul>
+        <li>Очень ласковая, но при этом ненавязчивая;</li>
+        <li>Жизнерадостная и энергичная, любит маленьких детей;</li>
+        <li>Бесстрашная и любопытная.</li>
+    </ul>
+    </p>
+    <hr>
+
+
+
 
 </body>
+
 </html>
