--- a/MyFirst.html
+++ b/MyFirst.html
@@ -16,7 +16,7 @@
 
     <p>
         <embed src="https://c.tenor.com/kQcGDGtb79QAAAAC/alice-animated-alice-stickers.gif" height="80" class="leftimg">
-    <h1><i>Всем привет! Меня зовут Оля!</i></h1>
+    <h1><i>Всем привет!</i></h1>
     </p>
     <hr>
     <p>
