убрала лишние теги

--- a/MyFirst.html
+++ b/MyFirst.html
@@ -7,21 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first site!</title>
     <link rel="stylesheet" href="MyArts.css">
-    <link rel="stylesheet" href="JSScripts.js">
+    <script defer src="JsScripts.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type='text/css'>
 </head>
 
 <body>
-
-
-    <p>
         <embed src="https://c.tenor.com/kQcGDGtb79QAAAAC/alice-animated-alice-stickers.gif" height="80" class="leftimg">
     <h1><i>Всем привет!</i></h1>
-    </p>
     <hr>
-    <p>
     <h4>Сегодня расскажу немного о кошечках)</h4>
-    </p>
     <p>
         На свете насчитывается более 200 различных попрод кошек. Мы посмотрим несколько из них:
         <br>
@@ -31,14 +25,12 @@
         <li>Сноу-шу</li>
     </ul>
     <i>Чтобы подробнее почитать о каждой жми на картинку.</i>
-    </p>
-    <br>
+    </p><br>
     <p>
         <a href="https://petstory.ru/knowledge/cats/cat-breeds/savannah/"><img
                 src="https://storage-api.petstory.ru/resize/0x0x70/c5/08/44/c5084487d1c1434f83d6114f27e96339.jpeg"
                 alt="Изображение кошки Саванны" height="160" class="leftimg"></a>
     </p>
-    <p>
     <h2>Саванна</h2>
     <h4>Краткие сведения:</h4>
     <ul>
@@ -46,13 +38,11 @@
         <li>очень общительная и ласковая кошка;</li>
         <li>не склонна к проявлению агрессии при правильном воспитании.</li>
     </ul>
-    </p>
     <hr>
     <p>
         <a href="https://petstory.ru/knowledge/cats/cat-breeds/american-wirehair/"><img src="img/кошка.jpg"
                 alt="Изображение кошки" height="160" class="leftimg"></a>
     </p>
-    <p>
     <h2>Американская жесткошерстная кошка</h2>
     <h4>Краткие сведения:</h4>
     <ul>
@@ -60,14 +50,12 @@
         <li>Игривы и дружелюбны;</li>
         <li>Редкая порода, в основном встречается в США и Канаде.</li>
     </ul>
-    </p>
     <hr>
     <p>
         <a href="https://petstory.ru/knowledge/cats/cat-breeds/snowshoe/"> <img
                 src="https://storage-api.petstory.ru/resize/0x0x70/fd/a8/11/fda811016678474692e69b9adbb982ab.jpeg"
                 alt="Изображение кошки сноу-шу" height="160" class="leftimg"></a>
     </p>
-    <p>
     <h2>Сноу-шу </h2>
     <h4>Краткие сведения:</h4>
     <ul>
@@ -75,12 +63,8 @@
         <li>Жизнерадостная и энергичная, любит маленьких детей;</li>
         <li>Бесстрашная и любопытная.</li>
     </ul>
-    </p>
     <hr>
-
-
-
-
+    
 </body>
 
 </html>
