--- a/MyFirst.html
+++ b/MyFirst.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first site!</title>
     <link rel="stylesheet" href="MyArts.css">
-    <script defer src="JsScripts.js"></script>
+    <script defer src="JSScripts.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" type='text/css'>
 </head>
 
